src/App.css
.display-frame {
  width: 100vw;
  max-width: 100vw;
  height: 100vh;
  max-height: 100vh;
  overflow: hidden;
}

html,
body {
  overscroll-behavior-x: none;
  overscroll-behavior-y: none;
}

.App {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.p5js-container {
  position: relative;
}

.p5js-container button {
  position: absolute;
  bottom: 8px;
  right: 8px;
  background: white;
  opacity: 0.3;
  transition: transform 0.1s ease-out;
  cursor: pointer;
  border: 1px solid #aaa;
  border-radius: 2px;
  margin: 0;
  padding: 2px 4px;
  transform: scale(0.75);

  text-align: center;
  vertical-align: middle;
}

.p5js-container button:hover {
  opacity: 0.7;
  transform: scale(1);
}

.p5js-container button img {
  position: relative;
  top: 2px;
  width: 24px;
  height: 24px;
}

